# UltraWave

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
example/: acoustic_2D.ipynb  acoustic_3D.ipynb  acoustic_3d_incident_signal.npy  acoustic_3d_rec_signal.npy  acoustic_absorption_2D.ipynb  elastic_2D.ipynb  elastic_2d_incident_signal.npy  elastic_2d_rec_signal.npy  elastic_3D.py  theoretical_scatter_signal_acoustic_3d.mat  theoretical_scatter_signal_elastic_2d.mat
example/.ipynb_checkpoints/: acoustic_2D-checkpoint.ipynb  acoustic_3D-checkpoint.ipynb  elastic_2D-checkpoint.ipynb  elastic_3D-checkpoint.ipynb  fluid_3d-checkpoint.ipynb
src/ultrawave/: __init__.py
src/ultrawave.egg-info/: PKG-INFO  PKG-INFO-Zixuan’s MacBook Pro  SOURCES.txt  requires.txt  top_level.txt
src/ultrawave/lib/: __init__.py  model_2d.py  model_3d.py  operator.py  source.py
theoretical_validation/: FluidSphere.m  SolidCylinder.m  SolidSphere.m  sbessel.m  sbessely.m
