[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'ultrawave'
version = '0.1.0'
authors = [
    {name = "Zixuan Tian", email = "zixuant5@illinois.edu"},
]
description = "ultrasound wave simulation toolbox"
readme = "README.md"
requires-python = ">=3.6.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "devito",
]

[project.urls]